Fixed: Some characters overflow in titles (bug#12062).

--- a/var/httpd/htdocs/skins/Customer/default/css/FAQ.Customer.Default.css
+++ b/var/httpd/htdocs/skins/Customer/default/css/FAQ.Customer.Default.css
@@ -128,7 +128,7 @@
 .FAQHeader h2 {
     margin: 3px 0 0;
     font-size: 24px;
-    line-height: 24px;
+    line-height: 120%;
     position: relative;
     float: left;
 }
@@ -173,5 +173,3 @@ iframe.FAQField {
 }
 
 }
-
-
