--- a/var/httpd/htdocs/skins/Customer/default/css/FAQ.FAQZoom.css
+++ b/var/httpd/htdocs/skins/Customer/default/css/FAQ.FAQZoom.css
@@ -24,7 +24,7 @@
 .FAQHeader h2 {
     margin: 3px 0 0;
     font-size: 24px;
-    line-height: 24px;
+    line-height: 120%;
     position: relative;
     float: left;
 }
